add issue relation features